# storage/api-docs/api-docs.json
@@ -5,7 +5,7 @@
         "description": "Api Docs",
         "version": "0.1."
     },
-    "basePath": "/api",
+    "basePath": "/app",
     "schemes": [
         "http"
     ],
@@ -157,6 +157,40 @@
                     }
                 ]
             }
+        },
+        "/filter": {
+            "post": {
+                "tags": [
+                    "user"
+                ],
+                "summary": "Search users by age or/and sex",
+                "description": "Search users",
+                "operationId": "filterUser",
+                "parameters": [
+                    {
+                        "name": "filter",
+                        "in": "body",
+                        "description": "User Post Data",
+                        "required": false,
+                        "schema": {
+                            "$ref": "#/definitions/filter"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    }
+                },
+                "security": [
+                    {
+                        "X-Api-Token": []
+                    }
+                ]
+            }
         }
     },
     "definitions": {
@@ -199,6 +233,16 @@
                 },
                 "cover": {
                     "type": "file"
+                }
+            }
+        },
+        "filter": {
+            "properties": {
+                "age": {
+                    "type": "integer"
+                },
+                "sex": {
+                    "type": "string"
                 }
             }
         },
